--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,14 +29,29 @@
   text-align: left;
 }
 
+
+
 /* Button styles */
 .button-greenBg-whiteText {
   background-color: #4caf50; /* Green */
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 12px 25px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
+  border-radius: 8px;
+}
+
+.button-tealBg-whiteText {
+  background-color: #96FAFF;
+  border: none;
+  color: #008080;
+  padding: 12px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 8px;
 }
