--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,6 +29,14 @@
   text-align: left;
 }
 
+.label-darkgrey-p1 {
+  color: #2e2e2e;
+  padding-top: 1px;
+  font-size: 12px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-align: left;
+}
+
 
 
 /* Button styles */
